app/globals.css
@import "tailwindcss";

:root {
  --background: #f6f1e7;
  --foreground: #1b1a1a;
}

@theme inline {
  --color-cream: #f6f1e7;
  --color-sand: #e4bf8b;
  --color-lightgold:#e4d59f;
  --color-gold: #ccba78;
  --color-darkgold: #baa448;
  --color-deepgold:#a48924;
   --color-lightgold: #d4caa2;
  --color-navy: #0a223a;
  --color-brown: #361c0c;
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-helvetica);
  --font-serif: var(--font-instrument-serif), serif;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-helvetica), Arial, Helvetica, sans-serif;
}
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}
@utility scrollbar-hide {
  scrollbar-width: none;
  &::-webkit-scrollbar {
    display: none;
  }
}

.underlinee {
  position: relative;
}

.underlinee::before {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  width: 0;
  height: 2px;
  background-color: #ccba78;
  transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
}
.underlinee:hover::before {
  left: 0;
  right: auto;
  width: 100%;
}

.flower {
  --g: /8.448% 8.448% radial-gradient(#000 calc(71% - 1px), #0000 71%) no-repeat;
  -webkit-mask:
    100% 50% var(--g),
    99.149% 59.187% var(--g),
    96.624% 68.062% var(--g),
    92.511% 76.322% var(--g),
    86.95% 83.685% var(--g),
    80.132% 89.901% var(--g),
    72.287% 94.758% var(--g),
    63.683% 98.091% var(--g),
    54.613% 99.787% var(--g),
    45.387% 99.787% var(--g),
    36.317% 98.091% var(--g),
    27.713% 94.758% var(--g),
    19.868% 89.901% var(--g),
    13.05% 83.685% var(--g),
    7.489% 76.322% var(--g),
    3.376% 68.062% var(--g),
    0.851% 59.187% var(--g),
    0% 50% var(--g),
    0.851% 40.813% var(--g),
    3.376% 31.938% var(--g),
    7.489% 23.678% var(--g),
    13.05% 16.315% var(--g),
    19.868% 10.099% var(--g),
    27.713% 5.242% var(--g),
    36.317% 1.909% var(--g),
    45.387% 0.213% var(--g),
    54.613% 0.213% var(--g),
    63.683% 1.909% var(--g),
    72.287% 5.242% var(--g),
    80.132% 10.099% var(--g),
    86.95% 16.315% var(--g),
    92.511% 23.678% var(--g),
    96.624% 31.938% var(--g),
    99.149% 40.813% var(--g),
    radial-gradient(100% 100%, #000 45.581%, #0000 calc(45.581% + 1px));
  mask:
    100% 50% var(--g),
    99.149% 59.187% var(--g),
    96.624% 68.062% var(--g),
    92.511% 76.322% var(--g),
    86.95% 83.685% var(--g),
    80.132% 89.901% var(--g),
    72.287% 94.758% var(--g),
    63.683% 98.091% var(--g),
    54.613% 99.787% var(--g),
    45.387% 99.787% var(--g),
    36.317% 98.091% var(--g),
    27.713% 94.758% var(--g),
    19.868% 89.901% var(--g),
    13.05% 83.685% var(--g),
    7.489% 76.322% var(--g),
    3.376% 68.062% var(--g),
    0.851% 59.187% var(--g),
    0% 50% var(--g),
    0.851% 40.813% var(--g),
    3.376% 31.938% var(--g),
    7.489% 23.678% var(--g),
    13.05% 16.315% var(--g),
    19.868% 10.099% var(--g),
    27.713% 5.242% var(--g),
    36.317% 1.909% var(--g),
    45.387% 0.213% var(--g),
    54.613% 0.213% var(--g),
    63.683% 1.909% var(--g),
    72.287% 5.242% var(--g),
    80.132% 10.099% var(--g),
    86.95% 16.315% var(--g),
    92.511% 23.678% var(--g),
    96.624% 31.938% var(--g),
    99.149% 40.813% var(--g),
    radial-gradient(100% 100%, #000 45.581%, #0000 calc(45.581% + 1px));
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    /* Move by 1/3 because we have 3 sets of badges */
    transform: translateX(calc(-33.33%));
  }
}

.carousel-anim {
  animation: scroll 20s linear infinite;
}

